--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,45 @@
                 app:contentScrim="@color/color_primary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <ImageView
-                    android:id="@+id/user_photo_img"
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/profile_image_size"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/userphoto"/>
+                    android:fitsSystemWindows="true">
+
+                    <ImageView
+                        android:id="@+id/user_photo_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/profile_image_size"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/userphoto"
+                        />
+                    <RelativeLayout
+                        android:id="@+id/profile_placeholder"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_background"
+                        android:visibility="gone">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/user_profile.placeholder.image"
+                            android:textColor="@color/color_white"
+                            android:fontFamily="sans-serif-medium"
+                            android:layout_centerHorizontal="true"
+                            android:layout_above="@+id/photo_placeholder"
+                            android:layout_marginBottom="@dimen/spacing_small_8"/>
+                        <ImageView
+                            android:id="@+id/photo_placeholder"
+                            android:layout_width="@dimen/placeholder_photo_size_90"
+                            android:layout_height="@dimen/placeholder_photo_size_90"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_add_a_photo_black_24dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginBottom="@dimen/spacing_large_56"/>
+                    </RelativeLayout>
+                </FrameLayout>
+
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -49,6 +81,7 @@
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
+
 
         <!-- Create status bar -->
         <LinearLayout
@@ -138,178 +171,9 @@
 
         </LinearLayout>
 
-        <!-- Created scroll -->
-        <android.support.v4.widget.NestedScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <!-- Include UserPofile Content -->
+        <include layout="@layout/user_profile_content"></include>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <!-- Create phone field -->
-                <LinearLayout
-                    style="@style/horizontalElement">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_call_black_24dp"
-                        />
-
-                    <LinearLayout
-                        style="@style/centralElement">
-
-                        <android.support.design.widget.TextInputLayout
-                            style="@style/textInputLayout"
-                            >
-
-                            <EditText
-                                android:id="@+id/phone_et"
-                                style="@style/editText"
-                                android:hint="@string/mobile_number_string"
-                                android:text="@string/mobile_number"
-                                />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/call_img"
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_phone_in_talk_black_24dp"/>
-                </LinearLayout>
-
-                <View
-                    style="@style/separatorGorizontal">
-                </View>
-                <!-- Create mail field -->
-                <LinearLayout
-                    style="@style/horizontalElement">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_email_black_24dp"
-                        />
-
-                    <LinearLayout
-                        style="@style/centralElement">
-
-                        <android.support.design.widget.TextInputLayout
-                            style="@style/textInputLayout">
-
-                            <EditText
-                                android:id="@+id/email_et"
-                                style="@style/editText"
-                                android:hint="@string/email_string"
-                                android:text="@string/email"
-                                />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_send_black_24dp"/>
-                </LinearLayout>
-
-                <View
-                    style="@style/separatorGorizontal">
-                </View>
-                <!-- Create  VK field -->
-                <LinearLayout
-                    style="@style/horizontalElement">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_vk_circle_black_24dp"
-                        />
-
-                    <LinearLayout
-                        style="@style/centralElement">
-
-                        <android.support.design.widget.TextInputLayout
-                            style="@style/textInputLayout">
-
-                            <EditText
-                                android:id="@+id/vk_et"
-                                style="@style/editText"
-                                android:hint="@string/profile_vk_String"
-                                android:text="@string/profile_vk"/>
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_visibility_black_24dp"/>
-                </LinearLayout>
-
-                <View
-                    style="@style/separatorGorizontal">
-                </View>
-                <!-- Create Git profile field -->
-                <LinearLayout
-                    style="@style/horizontalElement">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_github_circle_black_24dp"
-                        />
-
-                    <LinearLayout
-                        style="@style/centralElement">
-
-                        <android.support.design.widget.TextInputLayout
-                            style="@style/textInputLayout">
-
-                            <EditText
-                                android:id="@+id/git_et"
-                                style="@style/editText"
-                                android:hint="@string/github_repo_string"
-                                android:text="@string/github_repo"/>
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        style="@style/icon.right"
-                        android:src="@drawable/ic_visibility_black_24dp"/>
-                </LinearLayout>
-
-                <View
-                    style="@style/separatorGorizontal">
-                </View>
-                <!-- Create user about field-->
-                <LinearLayout
-                    style="@style/horizontalElement">
-
-                    <ImageView
-                        style="@style/icon.left"
-                        android:src="@drawable/ic_account_circle_black_24dp"
-                        />
-
-                    <LinearLayout
-                        style="@style/centralElement"
-                        android:layout_height="wrap_content">
-
-                        <android.support.design.widget.TextInputLayout
-                            style="@style/textInputLayout"
-                            >
-
-                            <EditText
-                                android:id="@+id/bio_et"
-                                style="@style/editText"
-                                android:hint="@string/about_string"
-                                android:text="@string/about"
-                                />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <ImageView
-                        style="@style/icon.right"
-                        />
-                </LinearLayout>
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
         <!-- Create float action button -->
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
